feat(lg3d-core): add X11 compositor for real apps
Let lg3d run as the X11 window manager + compositor of the display,
showing real X11 client apps as textured NativeWindow3D quads in the
3D scene. Pure Java over Escher (no JNI/JNA/patched JDK); a sibling
to the blocked legacy WinSysX11/LightPipe path, which is untouched.

- X11CompositeExt / X11DamageExt / X11ShmExt: new Escher extension
  bindings, styled after the existing X11FixesExt.
- X11Compositor: SubstructureRedirect WM takeover,
  CompositeRedirectSubwindows, X event loop routing DamageNotify and
  CursorNotify, and own-window exemption.
- CompositeWindowImageLoader: Damage-triggered pixmap to BufferedImage
  to TiledNativeWindowImage texture upload.
- X11InputForwarder: translate 3D pick coords to client-window pixels
  and re-inject pointer/keyboard via XTest; focus follows pointer.
- Wire X11IntegrationModule / X11WindowManager / X11Client and make
  NativeWindow3D composite-aware; add VerifyX11Extensions diagnostic
  and lgconfig_1p_x_composite.xml.
- Build/run/docs: -Pcompositor on the run task (config switch +
  lg3d.x11.compositor + --add-exports java.desktop/sun.awt),
  run-lg3d.sh -x, and README/CHANGELOG for the LFS target.